Revision history for Perl distribution CPAN-Testers-Data-Uploads
================================================================

0.12	05/11/2009
	- added fast reindex functionality
	- improved speed of index lookup

0.11	02/11/2009
	- update to logging messages
	- slight change to update to avoid unnecessary SQL updates.
	- attempt to catch missing index updates when updating CPAN entries.

0.10	12/10/2009
	- added oncpan field to ixlatest to further improve table lookups.

0.09	17/08/2009
	- fixed indexing bug.

0.08	15/08/2009
	- reworked reindexing to be less dramatic.
	- added example for reindexing.

0.07	19/05/2009
	Added an index lookup table, and tables now resides within the
	cpanstats database for easier cross-table queries.

0.06	15/02/2009
	- added missing README file

0.05	15/02/2009
	- added missing DBD prerequisites.

0.04	13/02/2009
	- changed to more formal package release.

0.03	29/12/2008
	- renamed Article reference.

0.02	18/11/2008
	- added multiple backup mechanism.
	- added documentation.
	- abstracted sources into configuration file.

0.01	10/11/2008
	- initial release