@@ -4,6 +4,7 @@ Revision history for Perl distribution CPAN-Testers-Data-Uploads
 0.12	05/11/2009
 	- added fast reindex functionality
 	- improved speed of index lookup
+	- added more POD descriptions of methods.
 
 0.11	02/11/2009
 	- update to logging messages
